@@ -3,6 +3,7 @@
         * Version 1.7.0 released
         ========================
 
+        Add GGti::overlap() method
         Correctly write model attributes in GCOMModelDRBFitting class
         Add GTime.datetime() method and add optional precision to GTime.utc() (#2909)
 
